--- a/advanced-cpp/lecture_5/1.md
+++ b/advanced-cpp/lecture_5/1.md
@@ -167,6 +167,21 @@ main(){
 
 ```
 
+Example:
+
+```C++
+push_back(T&& x){
+	if(memory available){
+		
+	}else{
+		move; allocate new memory; 
+	}
+}
+
+
+
+```
+
 ---
 
 `std::make_shared`
