lecture notes expression templates

--- a/advanced-cpp/lecture_8/3.md
+++ b/advanced-cpp/lecture_8/3.md
@@ -83,4 +83,4 @@ struct choose{
 ```
 
 `constexpr` guranteed to remain constant during compile time.
-`const` remains constant during run time.
+`const` remains constant during run time. Always fixed.
