--- a/swift/1.md
+++ b/swift/1.md
@@ -1,1 +1,10 @@
-# Swift Programming Language
+### Swift Programming Language
+
+#### Swift Features:
+
+1. Type safety & inference
+2. Closures
+3. Tuples
+4. Super powered enums
+5. Functional programming - map, filters
+6. Generics
