--- a/swift/1.md
+++ b/swift/1.md
@@ -2,9 +2,11 @@
 
 #### Swift Features:
 
-1. Type safety & inference
+```
+1. Type safety (wrong kind of thing is diff. to pass. compiler will tell you) & inference (let, var. compiler figures out type for you)
 2. Closures
 3. Tuples
 4. Super powered enums
 5. Functional programming - map, filters
 6. Generics
+```
