--- a/swift/1.md
+++ b/swift/1.md
@@ -10,3 +10,6 @@
 5. Functional programming - map, filters
 6. Generics
 ```
+
+* Clang knows nothing about swift
+* Swift compiler talks to Clang through XPC
