--- a/gradle/1.md
+++ b/gradle/1.md
@@ -4,7 +4,27 @@ Two core things in gradle
 - Project
 - Task
 
+Gradle uses groovy DSL. So `build.gradle` is groovy code ("actual code") unlike ant which uses xml files.
+
 ```
 # build.gradle
 apply plugin: "java"
+
+# you can define methods
+String method(String arg1) {
+  return arg1;
+}
 ```
+
+```
+# build.gradle
+apply plugin: "java" # Adds tasks to our script
+```
+
+To List all tasks for a given build.gradle
+```
+$ gradle tasks
+```
+
+
+
