--- a/gradle/1.md
+++ b/gradle/1.md
@@ -16,6 +16,7 @@ String method(String arg1) {
 }
 ```
 
+Applying a plugin adds tasks
 ```
 # build.gradle
 apply plugin: "java" # Adds tasks to our script
@@ -25,6 +26,3 @@ To List all tasks for a given build.gradle
 ```
 $ gradle tasks
 ```
-
-
-
