--- a/gradle/1.md
+++ b/gradle/1.md
@@ -26,3 +26,24 @@ To List all tasks for a given build.gradle
 ```
 $ gradle tasks
 ```
+
+```
+# build.gradle
+apply plugin: "java"
+
+sourceSets {
+    main {
+        java {
+            srcDir 'src/java'
+        }
+        resources {
+            srcDir 'src/resources'
+        }
+    }
+}
+```
+Run the task
+```
+$ gradle build
+# this will build the project inside build directory
+```
