--- a/gradle/1.md
+++ b/gradle/1.md
@@ -47,3 +47,16 @@ Run the task
 $ gradle build
 # this will build the project inside build directory
 ```
+
+Example gradle:
+Successfully builds the project.
+https://github.com/goyalankit/notes/commit/5a10005a69fec7f4bf2c1369e623ff2cf0f4e494
+
+```
+% java -jar build/libs/sample-gradle.jar hello
+Error: Could not find or load main class build.classes.main.com.ankit.src.GradleTutorial
+```
+We still need to add main class entry in MANIFEST file.
+
+Modify `jar` task in `build.gradle`
+https://github.com/goyalankit/notes/commit/a74db1fddc3990cad06e31a828bb3fd9e2eb185e
